# auroraplot

./: .bumpversion.cfg  .gitignore  AUTHORS.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  __init__.py  auroralactivity.py  auroraplot.py  aurorawatchnet.py  awplot.py  data.py  dt64tools.py  humiditydata.py  magdata.py  pyproject.toml  samnet.py  setup.py  temperaturedata.py  tools.py  voltagedata.py
.github/: CODEOWNERS
.github/workflows/: _reusable-build.yaml  build-packages.yaml  check-python-formatting.yaml  release-packages.yaml
auroraplot/: Makefile  __init__.py  auroralactivity.py  compile_tsintegrate.sh  data.py  decorators.py  dt64tools.py  filter.py  humiditydata.py  magdata.py  riodata.py  temperaturedata.py  tools.py  tsintegrate.c  utils.py  voltagedata.py
auroraplot/datasets/: __init__.py  aurorawatchnet.py  bgs_schools.py  cloudwatch.py  dtu.py  intermagnet.py  riometernet.py  samnet.py  uit.py
auroraplot/datasets/lancsrio/: __init__.py  riorawpower_linearize_lancsrio_and3.txt  riorawpower_linearize_lancsrio_kar1.txt
auroraplot/docs/: AuroraplotGUI.html
auroraplot/docs/latex/: riometernet.aux  riometernet.tex
auroraplot/examples/: dt64_demo.py  example_auroraplot_custom.py  load_mag_data_simple.ipynb  load_samnet_data.py  magqdc_example.py  make_qdc.py  make_rioqdc.py  plot_k_index.py  plot_mag_data.py
auroraplot/gui/: About  about.ui  auroraplot.ui  auroraplot_dataviewer.py  auroraplot_dataviewer.py.bak  auroraplot_dataviewer.ui  auroraplot_help.py  auroraplot_launcher.py  auroraplot_launcher.ui  auroraplotx.desktop  compile.sh  main.py  resources.qrc  resources_rc.py  ui_about.py  ui_auroraplot.py  ui_auroraplot_dataviewer.py  ui_auroraplot_launcher.py
auroraplot/gui/icons/: auroraplot.xcf  dataviewer.xcf  qdccreator.xcf  qdceditor.xcf
auroraplot/riodata/: __init__.py  qdc_algorithms.py
datasets/: aurorawatchnet.py  cloudwatch.py  dtu.py  samnet.py  uit.py
examples/: auroraplot_custom.py  example_auroraplot_custom.py  load_samnet_data.py  magqdc_example.py  make_rioqdc.py  plot_mag_data.py  stackplot.py
src/auroraplot/: __init__.py  data.py  dt64tools.py  magdata.py  temperaturedata.py
src/auroraplot/datasets/: aurorawatchnet.py  bgs_schools.py  cloudwatch.py  dtu.py  samnet.py
src/auroraplot/examples/: dt64_demo.py
src/auroraplot/riodata/: __init__.py  qdc_algorithms.py
src/auroraplot/scripts/: make_realtime_baseline.py
tests/: test_auroraplot.py  test_dt64tools.py  test_rio_data_qdc_algorithms.py  test_riodata.py
