[project]
name = "auroraplot"
dynamic = ["version"]

authors = [
    { name = "Steve Marple", email = "stevemarple@gmail.com" },
]
description = "Analyze and plot space weather datasets"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib >= 3.6.3",
    "numpy >= 2.4.2",
    "requests >= 2.33.0",
    "scipy >= 1.17.1",
    "urllib3 >= 1.26.12",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.scripts]
cache_data = "auroraplot.scripts.cache_data:main"
make_qdc = "auroraplot.scripts.make_qdc:main"
make_realtime_baseline = "auroraplot.scripts.make_realtime_baseline:main"
plot_data = "auroraplot.scripts.plot_data:main"
plot_mag_data = "auroraplot.scripts.plot_mag_data:main"

[project.urls]
Homepage = "https://github.com/stevemarple/auroraplot"
Issues = "https://github.com/stevemarple/auroraplot/issues"

[build-system]
requires = [
    "hatchling >= 1.26",
    "versioningit",
]
build-backend = "hatchling.build"

[build.hooks.vcs]
version-file = "src/auroraplot/_version.py"

[tool.black]
line-length = 120
target-version = ["py310", "py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.hatch.build]
artifacts = [
    "src/auroraplot/_version.py",
]

[tool.hatch.build.targets.sdist]
include = [
    "bin/*.py",
    "src/*",
    "examples/*",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/auroraplot",
]

[tool.hatch.build.targets.wheel.force-include]
"README.md" = "doc/README.md"
"examples" = "auroraplot/examples"

[tool.hatch.version]
source = "versioningit"

[tool.versioningit]

[tool.versioningit.vcs]
match = [
    "v*",
]

[tool.versioningit.write]
file = "src/auroraplot/_version.py"
